tests/bad/uninitialized_variable_assignment.rat
/// fail: Variable x doesn't exist

x = 2
